# py_rosetta

./: README.md  pyproject.toml
src/py_rosetta/: find_largest_left_truncatable_prime_in_a_given_base.py  pig_the_dice_game.py  speech_synthesis.py
tests/: #ros_utils_test.py#  __init__.py  ros_utils_test.py
tools/: ros_utils.py
