[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "py-rosetta"
authors = [
  {name = "Larry Devlin", email = "lpd3@github.com"},
]
description = "Solutions to tasks found at rosettacode.org."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
dynamic = ["version"]
# dependencies = []

[tool.setuptools.scm]
